Bruk "enhanced switch"
Dette lot oss fjerne en unødvendig default-branch